Make use of new language features